Track models under registration (#236)
